@@ -1313,6 +1313,65 @@ name|port
 argument_list|)
 return|;
 block|}
+DECL|method|newNodeReport (NodeId nodeId, NodeState nodeState, String httpAddress, String rackName, Resource used, Resource capability, int numContainers, String healthReport, long lastHealthReportTime)
+specifier|public
+specifier|static
+name|NodeReport
+name|newNodeReport
+parameter_list|(
+name|NodeId
+name|nodeId
+parameter_list|,
+name|NodeState
+name|nodeState
+parameter_list|,
+name|String
+name|httpAddress
+parameter_list|,
+name|String
+name|rackName
+parameter_list|,
+name|Resource
+name|used
+parameter_list|,
+name|Resource
+name|capability
+parameter_list|,
+name|int
+name|numContainers
+parameter_list|,
+name|String
+name|healthReport
+parameter_list|,
+name|long
+name|lastHealthReportTime
+parameter_list|)
+block|{
+return|return
+name|newNodeReport
+argument_list|(
+name|nodeId
+argument_list|,
+name|nodeState
+argument_list|,
+name|httpAddress
+argument_list|,
+name|rackName
+argument_list|,
+name|used
+argument_list|,
+name|capability
+argument_list|,
+name|numContainers
+argument_list|,
+name|healthReport
+argument_list|,
+name|lastHealthReportTime
+argument_list|,
+literal|null
+argument_list|)
+return|;
+block|}
 DECL|method|newNodeReport (NodeId nodeId, NodeState nodeState, String httpAddress, String rackName, Resource used, Resource capability, int numContainers, String healthReport, long lastHealthReportTime, Set<String> nodeLabels)
 specifier|public
 specifier|static
